feat: update locales

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -5,6 +5,7 @@
     "BannedNoReason": "Byl/a jsi trvale zabanován/a za podvádění!\nTvoje Ban ID: %s",
     "BannedReason": "Důvod",
     "BannedTitle": "Byl/a jsi zabanován/a anticheatem",
+    "BannedHeader": "Připojení Selhalo",
     "BlacklistedAsset": "Zakázaný asset - [%s]",
     "BlacklistedExplosion": "Zakázaná exploze - [%s]",
     "BlacklistedObject": "Zakázaný objekt - [%s]",
@@ -64,11 +65,13 @@
     "RemoveWeapons": "Pokus o Remove Weapons",
     "ResourceStart": "Resource Spuštěn - [%s]",
     "ResourceStop": "Resource Zastaven - [%s]",
+    "SafeEvent": "Safe Event - [%s]",
     "SilentAim": "Silent Aim",
     "SmallPed": "Small Ped",
     "Spectate": "Spectate Režim",
     "SpawnWeapon": "Pokus o spawn zbraně",
     "SpoofWeapon": "Pokus o spoofnutí zbraně - [%s]",
+    "SpoofedShot": "Spoofed Bullet",
     "StateBag": "Pokus o crash statebag handleru",
     "SuspiciousMoney": "Podezřelý nárust financí - [%s]",
     "SuperJump": "Super Jump",
