--- a/locales/en.json
+++ b/locales/en.json
@@ -1,10 +1,11 @@
 {
     "Banned": "You have been permanently banned for cheating!\nReason: %s\nYour Ban ID: %s",
     "BannedBanID": "Ban ID",
-    "BannedFooter": "This ban never expires. If you think this was a mistake or you just want to appeal your ban, please join the support discord below.",
+    "BannedFooter": "If you think this was a mistake, please contact a server admin.",
     "BannedNoReason": "You have been permanently banned for cheating!\nYour Ban ID: %s",
     "BannedReason": "Reason",
-    "BannedTitle": "You have been banned by the anticheat",
+    "BannedTitle": "You have been permanently banned from this server for Cheating.",
+    "BannedHeader": "Connection Failed",
     "BlacklistedAsset": "Blacklisted Asset - [%s]",
     "BlacklistedExplosion": "Blacklisted Explosion - [%s]",
     "BlacklistedObject": "Blacklisted Object - [%s]",
@@ -64,11 +65,13 @@
     "RemoveWeapons": "Attempted to Remove Weapons",
     "ResourceStart": "Resource Started - [%s]",
     "ResourceStop": "Resource Stopped - [%s]",
+    "SafeEvent": "Triggered Protected Event - [%s]",
     "SilentAim": "Silent Aim Detected",
     "SmallPed": "Small Ped",
     "Spectate": "Spectate Mode",
     "SpawnWeapon": "Attempted to Spawn a Weapon",
     "SpoofWeapon": "Attempted to spoof weapon - [%s]",
+    "SpoofedShot": "Spoofed Bullet",
     "StateBag": "Attempted to crash statebag handler",
     "SuspiciousMoney": "Suspicious Money Change - [%s]",
     "SuperJump": "Super Jump",
