chore: update locales

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -82,5 +82,23 @@
     "VehicleNoClip": "No-Clip s Vozidlem",
     "VehicleSpam": "Spam vozidlel - [Vytvořeno %s vozidel]",
     "WeaponDamageBoost": "Damage Boost",
-    "WeaponDefenseBoost": "Defense Boost"
+    "WeaponDefenseBoost": "Defense Boost",
+    "WebhookTitle": "Hráč byl detekován!",
+    "WebhookMethod": "Typ Detekce",
+    "WebhookReason": "Důvod",
+    "WebhookBanID": "ID Banu",
+    "WebhookPlayer": "Hráč",
+    "WebhookDiscordID": "Discord",
+    "WebhookSteamID": "Steam ID",
+    "WebhookFivemID": "FiveM ID",
+    "WebhookLicense": "Rockstar License",
+    "WebhookIP": "IP Adresa",
+    "WebhookHWID": "HWID",
+    "WebhookPing": "Odezva",
+    "WebhookConfigOption": "Možnost v Configu",
+    "MissingIdentifier": "Chybějící Identifier: %s",
+    "MissingSteam": "Tvoje Steam ID nebylo nalezeno, ujisti se, že máš steam nainstalovaný, přihlášený a spuštěný před otevřením FiveM",
+    "MissingDiscord": "Tvůj Discord nebyl nalezen, ujisti se, že máš svoje Discord a FiveM účty propojeny.",
+    "MissingLicense": "Tvoje Rockstar License nebyla nalezena, zkus otevřít FiveM znovu.",
+    "MissingFivem": "Tvůj FiveM identifier nebyl nalezen, ujisti se, že máš svůj CFX.re účet propojený v nastavení."
 }
