--- a/locales/en.json
+++ b/locales/en.json
@@ -82,5 +82,23 @@
     "VehicleNoClip": "Vehicle No-Clip Detected",
     "VehicleSpam": "Mass Vehicle Spam - [Spawned %s vehicles]",
     "WeaponDamageBoost": "Weapon Damage Boost",
-    "WeaponDefenseBoost": "Weapon Defense Boost"
+    "WeaponDefenseBoost": "Weapon Defense Boost",
+    "WebhookTitle": "Player has been detected!",
+    "WebhookMethod": "Punish Method",
+    "WebhookReason": "Reason",
+    "WebhookBanID": "Ban ID",
+    "WebhookPlayer": "Player",
+    "WebhookDiscordID": "Discord",
+    "WebhookSteamID": "Steam ID",
+    "WebhookFivemID": "FiveM ID",
+    "WebhookLicense": "Rockstar License",
+    "WebhookIP": "IP Address",
+    "WebhookHWID": "HWID",
+    "WebhookPing": "Ping",
+    "WebhookConfigOption": "Config Option",
+    "MissingIdentifier": "Missing Identifier: %s",
+    "MissingSteam": "Your Steam ID identifier is missing, please make sure you have steam installed, logged in and running before opening FiveM",
+    "MissingDiscord": "Your Discord identifier is missing, please make sure your Discord and FiveM accounts are connected.",
+    "MissingLicense": "Your Rockstar License identifier is missing, try opening FiveM again.",
+    "MissingFivem": "Your FiveM identifier is missing, please make sure to link your CFX.re account in the settings."
 }
