--- a/locales/hu.json
+++ b/locales/hu.json
@@ -1,22 +1,22 @@
 {
     "Banned": "Ki lettél tiltva a szerverről!\nOk: %s\nBan ID: %s",
     "BannedBanID": "Ban ID",
-    "BannedFooter": "Ha azt gondolod, hogy tévesen lettél kitiltva, nyiss egy ticketet a Discord szerverünkön.",
+    "BannedFooter": "Ha azt gondolod, hogy tévesen lettél kitiltva, lépj kapcsolatba egy adminnal.",
     "BannedNoReason": "Ki lettél tiltva a szerverről!\nBan ID: %s",
     "BannedReason": "Ok",
     "BannedTitle": "Véglegesen ki lettél tiltva a szerverről!",
     "BannedHeader": "Sikertelen csatlakozás",
-    "BlacklistedAsset": "Blacklistelt asset - [%s]",
-    "BlacklistedExplosion": "Blacklistelt robbanás - [%s]",
-    "BlacklistedObject": "Blacklistelt objektum - [%s]",
-    "BlacklistedParticle": "Blacklistelt particle - [%s]",
-    "BlacklistedPed": "Blacklistelt ped - [%s]",
-    "BlacklistedPlate": "Blacklistelt rendszám - [%s]",
-    "BlacklistedTask": "Blacklistelt task - [%s]",
-    "BlacklistedTrigger": "Blacklistelt trigger - [%s]",
-    "BlacklistedVehicle": "Blacklistelt jármű - [%s]",
-    "BlacklistedWeapon": "Blacklistelt fegyver - [%s]",
-    "BlacklistedWord": "Ki lettél rúgva blacklistelt szavak miatt - [%s]",
+    "BlacklistedAsset": "Feketelistázott asset - [%s]",
+    "BlacklistedExplosion": "Feketelistázott robbanás - [%s]",
+    "BlacklistedObject": "Feketelistázott objektum - [%s]",
+    "BlacklistedParticle": "Feketelistázott particle - [%s]",
+    "BlacklistedPed": "Feketelistázott ped - [%s]",
+    "BlacklistedPlate": "Feketelistázott rendszám - [%s]",
+    "BlacklistedTask": "Feketelistázott task - [%s]",
+    "BlacklistedTrigger": "Feketelistázott trigger - [%s]",
+    "BlacklistedVehicle": "Feketelistázott jármű - [%s]",
+    "BlacklistedWeapon": "Feketelistázott fegyver - [%s]",
+    "BlacklistedWord": "Ki lettél rúgva Feketelistázott szavak miatt - [%s]",
     "Blips": "Játékos blipek észlelve",
     "BoostedExplosion": "Damage boostolt robbanás",
     "CarRam": "Megpróbált karaktert elütni",
@@ -54,7 +54,7 @@
     "NoDiscordDesc": "Ezen a szerveren csatlakoztatnod kell a Discord fiókodat!",
     "NoDiscordSub": "Nyisd meg a FiveM beállításait, és ellenőrizd, hogy a Discord-fiókod csatlakoztatva van-e!",
     "NoRecoil": "No Weapon Recoil",
-    "OCR": "Blacklistelt string a képernyőn - [%s]",
+    "OCR": "Feketelistázott string a képernyőn - [%s]",
     "ObjectSpam": "Tömeges Object Spawn - [%s objektum spawnolva]",
     "PedSpam": "Tömeges Ped Spawn - [%s ped spawnolva]",
     "Pickup": "Pickup Spawnolva - [%s]",
