--- a/locales/hu.json
+++ b/locales/hu.json
@@ -6,22 +6,22 @@
     "BannedReason": "Ok",
     "BannedTitle": "Véglegesen ki lettél tiltva a szerverről!",
     "BannedHeader": "Sikertelen csatlakozás",
-    "BlacklistedAsset": "Feketelistázott asset - [%s]",
-    "BlacklistedExplosion": "Feketelistázott robbanás - [%s]",
-    "BlacklistedObject": "Feketelistázott objektum - [%s]",
-    "BlacklistedParticle": "Feketelistázott particle - [%s]",
-    "BlacklistedPed": "Feketelistázott ped - [%s]",
-    "BlacklistedPlate": "Feketelistázott rendszám - [%s]",
-    "BlacklistedTask": "Feketelistázott task - [%s]",
-    "BlacklistedTrigger": "Feketelistázott trigger - [%s]",
-    "BlacklistedVehicle": "Feketelistázott jármű - [%s]",
-    "BlacklistedWeapon": "Feketelistázott fegyver - [%s]",
-    "BlacklistedWord": "Ki lettél rúgva Feketelistázott szavak miatt - [%s]",
+    "BlacklistedAsset": "Blacklistelt asset - [%s]",
+    "BlacklistedExplosion": "Blacklistelt robbanás - [%s]",
+    "BlacklistedObject": "Blacklistelt objektum - [%s]",
+    "BlacklistedParticle": "Blacklistelt particle - [%s]",
+    "BlacklistedPed": "Blacklistelt ped - [%s]",
+    "BlacklistedPlate": "Blacklistelt rendszám - [%s]",
+    "BlacklistedTask": "Blacklistelt task - [%s]",
+    "BlacklistedTrigger": "Blacklistelt trigger - [%s]",
+    "BlacklistedVehicle": "Blacklistelt jármű - [%s]",
+    "BlacklistedWeapon": "Blacklistelt fegyver - [%s]",
+    "BlacklistedWord": "Ki lettél rúgva blacklistelt szavak miatt - [%s]",
     "Blips": "Játékos blipek észlelve",
-    "BoostedExplosion": "Damage boostolt robbanás",
+    "BoostedExplosion": "Növelt sebzésű robbanás",
     "CarRam": "Megpróbált karaktert elütni",
-    "CheatOverlay": "Cheat Overlay észlelve",
-    "CitizenAIs": "Citizen Cheat észlelve",
+    "CheatOverlay": "Csalás Overlay észlelve",
+    "CitizenAIs": "Citizen csalás észlelve",
     "ClearPedTasks": "Ped taskok törlése",
     "Clip Size": "Túltöltött fegyver - [Ammo: %s | Maximum: %s]",
     "CombatRoll": "Végtelen combat roll",
@@ -53,19 +53,19 @@
     "NoDiscord": "Nincs csatlakoztatva a Discord fiókod!",
     "NoDiscordDesc": "Ezen a szerveren csatlakoztatnod kell a Discord fiókodat!",
     "NoDiscordSub": "Nyisd meg a FiveM beállításait, és ellenőrizd, hogy a Discord-fiókod csatlakoztatva van-e!",
-    "NoRecoil": "No Weapon Recoil",
-    "OCR": "Feketelistázott string a képernyőn - [%s]",
-    "ObjectSpam": "Tömeges Object Spawn - [%s objektum spawnolva]",
-    "PedSpam": "Tömeges Ped Spawn - [%s ped spawnolva]",
-    "Pickup": "Pickup Spawnolva - [%s]",
+    "NoRecoil": "Nincs fegyver recoil",
+    "OCR": "Blacklistelt string a képernyőn - [%s]",
+    "ObjectSpam": "Tömeges objektum spawn - [%s objektum spawnolva]",
+    "PedSpam": "Tömeges ped spawn - [%s ped spawnolva]",
+    "Pickup": "Pickup spawnolva - [%s]",
     "PlateChange": "Rendszámtábla csere [%s -> %s]",
-    "Radar": "Minimap without being in vehicle",
+    "Radar": "Minimap anélkül, hogy a járműben lenne",
     "RainbowVehicle": "Szívárvány jármű",
-    "RapidFire": "Rapid Fire Rate",
+    "RapidFire": "Túl gyors tűzsebesség",
     "RemoveWeapons": "Megpróbálta eltávolítani a fegyvereket",
     "ResourceStart": "Resource elindítva - [%s]",
     "ResourceStop": "Resource leállítva - [%s]",
-    "SafeEvent": "Triggered Protected Event - [%s]",
+    "SafeEvent": "Védett event triggerelve - [%s]",
     "SilentAim": "Silent Aim észlelve",
     "SmallPed": "Kicsi Ped",
     "Spectate": "Spectate Mód",
@@ -74,13 +74,31 @@
     "SpoofedShot": "Spoofolt töltény",
     "StateBag": "Megpróbálta crashelni a statebag handler-t",
     "SuspiciousMoney": "Gyanús pénzváltás - [%s]",
-    "SuperJump": "Super Jump",
+    "SuperJump": "Szuper ugrás",
     "SupportDiscord": "Discord szerver",
     "TazePlayer": "Megpróbált játékost sokkolni",
     "Teleport": "Teleport - [%s méter]",
     "ThermalVision": "Hőlátás",
     "VehicleNoClip": "Jármű No-Clip észlelve",
     "VehicleSpam": "Tömeges jármű spam - [%s jármű spawnolva]",
-    "WeaponDamageBoost": "Fegyver sebzés boost",
-    "WeaponDefenseBoost": "Fegyver védelem boost"
+    "WeaponDamageBoost": "Fegyver sebzés növelés",
+    "WeaponDefenseBoost": "Fegyver védelem növelés",
+    "WebhookTitle": "Játékos észlelve!",
+    "WebhookMethod": "Büntetés módszere",
+    "WebhookReason": "Ok",
+    "WebhookBanID": "Ban ID",
+    "WebhookPlayer": "Játékos",
+    "WebhookDiscordID": "Discord",
+    "WebhookSteamID": "Steam ID",
+    "WebhookFivemID": "FiveM ID",
+    "WebhookLicense": "Rockstar licensz",
+    "WebhookIP": "IP cím",
+    "WebhookHWID": "HWID",
+    "WebhookPing": "Ping",
+    "WebhookConfigOption": "Config beállítás",
+    "MissingIdentifier": "Hiányzó azonosító: %s",
+    "MissingSteam": "Hiányzik a Steam ID-d. A FiveM megnyitása előtt győződj meg arról, hogy telepítetted a Steamet, bejelentkeztél és fut.",
+    "MissingDiscord": "A Discord ID-d hiányzik. Kérjük, ellenőrizd, hogy a Discord- és FiveM-fiókod össze van-e kapcsolva.",
+    "MissingLicense": "Hiányzik a Rockstar licenszed, próbáld meg újra megnyitni a FiveM-et.",
+    "MissingFivem": "A FiveM azonosítód hiányzik, kérjük, kapcsold össze a Cfx.re fiókodat a beállításokban."
 }
